realize el css del del h2

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,3 +14,11 @@ body {
     width: 1160px;
     margin: 100px ;
 }
+
+
+h2 {
+    color: #3B4CCA;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
