realize el css del del contenido

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -34,3 +34,10 @@ p {
     margin-bottom: 40px;
 }
 
+.contenido {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+
