realize el css de las etiquetas h3

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -53,3 +53,11 @@ img {
     margin-bottom: 10px;
 }
 
+h3 {
+    color: #1A2C68;
+    font-size: 20px;
+    margin-bottom: 10px;
+    text-align: left;
+}
+
+
